--- a/FWtemplate/index.html
+++ b/FWtemplate/index.html
@@ -53,7 +53,7 @@
 							<a class="page-scroll" href="#about">About</a>
 						</li>
 						<li>
-							<a class="page-scroll" href="#portfolio">Portfolio</a>
+							<a class="page-scroll" href="#portfolio">Presence</a>
 						</li>
 						<li>
 							<a class="page-scroll" href="#team">Team</a>
@@ -516,7 +516,7 @@
 		</p>
 		<footer>
 			<div class="container text-center">
-				<p>Designed by <a href="http://moozthemes.com"><span>MOOZ</span>Themes.com</a></p>
+				<p>Designed by <a href="https://github.com/SamZayd"><span>Sadaf</span> Khan</a></p>
 			</div>
 		</footer>
 
